@@ -43,6 +43,7 @@ firefox-trunk (15.0~a1~hg20120424r92149-0ubuntu1) UNRELEASED; urgency=low
     new, common file (mozbuild.mk)
     - update debian/rules
     - add debian/build/mozbuild.mk
+    - update debian/build/testsuite.mk
   * Move debian/compare-locales in to debian/build
     - move debian/compare-locales => debian/build/compare-locales
     - update debian/build/mozbuild.mk
